--- a/account/src/main/res/layout/activity_account_logged_out.xml
+++ b/account/src/main/res/layout/activity_account_logged_out.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/view_account_logged_out"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -41,6 +42,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_account_circle_black_48px" />
+        app:srcCompat="@drawable/ic_account_circle_black_48px"
+        tools:ignore="ContentDescription" />
 
 </android.support.constraint.ConstraintLayout>
