Adding privacy policy in the account screens

--- a/account/src/main/res/layout/activity_account_logged_out.xml
+++ b/account/src/main/res/layout/activity_account_logged_out.xml
@@ -20,6 +20,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
+    <TextView
+        android:id="@+id/view_account_privacy_policy_logged_out"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginStart="24dp"
+        android:gravity="center"
+        android:text="@string/privacy_policy_html"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toTopOf="@+id/view_account_log_in"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <Button
         android:id="@+id/view_account_log_in"
         android:layout_width="wrap_content"
