--- a/account/src/main/res/layout/activity_account_logged_in.xml
+++ b/account/src/main/res/layout/activity_account_logged_in.xml
@@ -38,6 +38,20 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view_account_image" />
 
+    <TextView
+        android:id="@+id/view_account_privacy_policy_logged_in"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginStart="24dp"
+        android:gravity="center"
+        android:text="@string/privacy_policy_html"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toTopOf="@+id/view_account_re_upload"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <Button
         android:id="@+id/view_account_re_upload"
         android:layout_width="wrap_content"
